--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -5,5 +5,7 @@
 <% @stories.each do |story| %>
   <div id="story-<%= story.id %>">
     <%= story.title %> - <%= story.points %>
+    -
+    <%= link_to 'Edit', edit_story_path(story) %>
   </div>
 <% end %>
