--- a/app/views/stories/new.html.erb
+++ b/app/views/stories/new.html.erb
@@ -1,16 +1,2 @@
 <h1>New Story</h1>
-
-<%= form_for @story do |f| %>
-
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-
-  <%= f.label :description %>
-  <%= f.text_area :description %>
-
-  <%= f.label :points %>
-  <%= f.select :points, Story::Points %>
-
-  <%= f.submit %>
-
-<% end %>
+<%= render 'form' %>
