--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -9,6 +9,8 @@
   <%= f.label :points %>
   <%= f.select :points, Story::Points %>
 
-  <%= f.submit %>
+  <div class="form-actions">
+    <%= f.submit nil, class: 'btn btn-primary' %>
+  </div>
 
 <% end %>
