--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,21 @@
 </head>
 <body>
 
-  <% flash.each do |name, value| %>
-    <div class="flash-#{name}"><%= value %></div>
-  <% end %>
+  <div class="container">
+    <div class="row">
+      <div class="span12">
+        <% flash.each do |name, value| %>
+          <div class="alert <%= alert_css_class(name) %>"><%= value %></div>
+        <% end %>
+      </div>
+    </div>
 
-  <%= yield %>
+    <div class="row">
+      <div class="span12">
+        <%= yield %>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
