--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -7,11 +7,36 @@
 </div>
 
 <div id="stories">
-  <% @stories.each do |story| %>
-    <div class="well" id="story-<%= story.id %>">
-      <%= story.title %> - <%= story.points %>
-      -
-      <%= link_to 'Edit', edit_story_path(story) %>
-    </div>
-  <% end %>
+  <h2>In Progress</h2>
+  <div id="in-progress">
+    <% @in_progress_stories.each do |story| %>
+      <div class="well" id="story-<%= story.id %>">
+        <%= story.title %> - <%= story.points %>
+        -
+        <%= link_to 'Edit', edit_story_path(story) %>
+      </div>
+    <% end %>
+  </div>
+
+  <h2>Backlog</h2>
+  <div id="backlog">
+    <% @backlog_stories.each do |story| %>
+      <div class="well" id="story-<%= story.id %>">
+        <%= story.title %> - <%= story.points %>
+        -
+        <%= link_to 'Edit', edit_story_path(story) %>
+      </div>
+    <% end %>
+  </div>
+
+  <h2>Completed</h2>
+  <div id="completed">
+    <% @completed_stories.each do |story| %>
+      <div class="well" id="story-<%= story.id %>">
+        <%= story.title %> - <%= story.points %>
+        -
+        <%= link_to 'Edit', edit_story_path(story) %>
+      </div>
+    <% end %>
+  </div>
 </div>
