--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -9,34 +9,16 @@
 <div id="stories">
   <h2>In Progress</h2>
   <div id="in-progress">
-    <% @in_progress_stories.each do |story| %>
-      <div class="well" id="story-<%= story.id %>">
-        <%= story.title %> - <%= story.points %>
-        -
-        <%= link_to 'Edit', edit_story_path(story) %>
-      </div>
-    <% end %>
+    <%= render 'stories', stories: @in_progress_stories %>
   </div>
 
   <h2>Backlog</h2>
   <div id="backlog">
-    <% @backlog_stories.each do |story| %>
-      <div class="well" id="story-<%= story.id %>">
-        <%= story.title %> - <%= story.points %>
-        -
-        <%= link_to 'Edit', edit_story_path(story) %>
-      </div>
-    <% end %>
+    <%= render 'stories', stories: @backlog_stories %>
   </div>
 
   <h2>Completed</h2>
   <div id="completed">
-    <% @completed_stories.each do |story| %>
-      <div class="well" id="story-<%= story.id %>">
-        <%= story.title %> - <%= story.points %>
-        -
-        <%= link_to 'Edit', edit_story_path(story) %>
-      </div>
-    <% end %>
+    <%= render 'stories', stories: @completed_stories %>
   </div>
 </div>
